prueba ejecucion comando larga duracion en linux